--- a/frontend/style.css
+++ b/frontend/style.css
@@ -57,8 +57,10 @@ body {
   }
 
   .nav-left .logo {
-    width: 40px;
-    height: 40px;
+    width: 48px;
+    height: 48px;
+    min-width: 48px;
+    flex-shrink: 0;
   }
 
   .nav-left .nav-quote {
